# avalanche-telemetry

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: test-and-release.yml
avalanche-telemetry-cloudwatch/: Cargo.toml  README.md
avalanche-telemetry-cloudwatch-installer/: Cargo.toml  README.md
avalanche-telemetry-cloudwatch-installer/examples/: download.rs
avalanche-telemetry-cloudwatch-installer/src/: github.rs  s3.rs
avalanche-telemetry-cloudwatch/src/: command.rs  main.rs
aws-volume-mounter/: Cargo.toml  README.md
aws-volume-mounter/src/: command.rs  main.rs
aws-volume-provisioner/: Cargo.toml  README.md
aws-volume-provisioner/src/: command.rs  main.rs
scripts/: build.release.sh
