[package]
name = "avalanche-telemetry-cloudwatch-installer"
version = "0.0.106" # https://github.com/ava-labs/avalanche-telemetry/releases
edition = "2021"
rust-version = "1.69"
publish = true
description = "avalanche-telemetry-cloudwatch installer"
repository = "https://github.com/ava-labs/avalanche-telemetry"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
log = "0.4.17"
random-manager = "0.0.5"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96" # https://github.com/serde-rs/json
tokio = { version = "1.28.1", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
env_logger = "0.10.0"
