[package]
name = "avalanche-telemetry-cloudwatch"
version = "0.0.71" # https://github.com/ava-labs/avalanche-telemetry/releases
edition = "2021"
rust-version = "1.68"
description = "Avalanche telemetry agent"
repository = "https://github.com/ava-labs/avalanche-telemetry"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "avalanche-telemetry-cloudwatch"
path = "src/main.rs"

[dependencies]
aws-manager = { version = "0.24.28", features = ["cloudwatch", "ec2"] } # https://crates.io/crates/aws-manager
aws-sdk-cloudwatch = "0.24.0"
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
env_logger = "0.10.0"
log = "0.4.17"
prometheus-manager = "0.0.24"
reqwest = "0.11.15"
tokio = { version = "1.26.0", features = ["full"] }
