[package]
name = "avalanche-telemetry-cloudwatch"
version = "0.0.107" # https://github.com/ava-labs/avalanche-telemetry/releases
edition = "2021"
rust-version = "1.69"
description = "Avalanche telemetry agent"
repository = "https://github.com/ava-labs/avalanche-telemetry"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "avalanche-telemetry-cloudwatch"
path = "src/main.rs"

[dependencies]
aws-manager = { version = "0.28.13", features = ["cloudwatch", "ec2"] } # https://crates.io/crates/aws-manager
aws-sdk-cloudwatch = "0.29.0"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
env_logger = "0.10.0"
log = "0.4.18"
prometheus-manager = "0.0.30"
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["full"] }
